--- a/inst/scripts/setup.Rnw
+++ b/inst/scripts/setup.Rnw
@@ -8,6 +8,8 @@ library(DNAcopy)
 library(IRanges)
 library(mybase)
 library(ff)
+library(crlmm)
+library(GenomicRanges)
 @
 
 Specify where to store and look for intermediate files.
@@ -16,12 +18,16 @@ Specify where to store and look for intermediate files.
 outdir <- "/amber1/scratch/rscharpf/beaty_beadStudio"
 if(!file.exists(outdir)) dir.create(outdir)
 ldPath(outdir)
+ocSamples(100)
+library(Study)
+data(Beaty)
+cdfName <- Beaty[["cdfName"]]
 @
 
 Load the object containing the log R ratios for the entire dataset.
 
 <<lrSet>>=
-lrSet <- checkExists("lrSet", outdir, getLrSet)
-lrSet$pedId <- who(sampleNames(lrSet))
+##lrSet <- checkExists("lrSet", outdir, getLrSet)
+##lrSet$pedId <- who(sampleNames(lrSet))
 @
 
