--- a/inst/scripts/Beaty.Rnw
+++ b/inst/scripts/Beaty.Rnw
@@ -7,24 +7,33 @@ The segmentation is done by splitting the samples into batches of 600
 and running the jobs on separate nodes.  Uncomment the following lines
 to submit (must be on a fat node).
 
-% \SweaveInput{segmentation}
+%\SweaveInput{InitializeContainer}
+%\SweaveInput{ReadBeadStudio}
 
-Remove the whole genome amplified samples for now and focus on
-chromosome 1 so that we can work with matrices instead of ff objects.
+<<quitearly>>=
+##q("no")
+@
+
+% \SweaveInput{segmentation}
 
 % \SweaveInput{DNAsource}
 
-\SweaveInput{Exclusions}
-
-\SweaveInput{CallDeletions}
-
-\SweaveInput{CallDenovo}
-
-\SweaveInput{CommonVariants}
-
-\SweaveInput{DenovoFigures}
+%\SweaveInput{Exclusions}
+%
+%\SweaveInput{CallDeletions}
+%
+%\SweaveInput{CallDenovo}
+%
+%\SweaveInput{CommonVariants}
+%
+%\SweaveInput{DenovoFigures}
 
 \SweaveInput{AllChromosomes.Rnw}
+<<>>=
+q("no")
+@
+\SweaveInput{DenovoFigures}
+
 
 
 
